--- a/config/locales/social_share_button.fr.yml
+++ b/config/locales/social_share_button.fr.yml
@@ -1,19 +1,21 @@
 fr:
   social_share_button:
-    share_to: Partager sur %{name}
-    weibo: Sina Weibo
-    twitter: Twitter
-    facebook: Facebook
-    douban: Douban
-    qq: Qzone
     delicious: Delicious
-    google_plus: Google+
-    google_bookmark: Google Bookmark
-    tumblr: Tumblr
-    pinterest: Pinterest
+    douban: Douban
     email: Email
+    facebook: Facebook
+    google_bookmark: Google Bookmark
+    google_plus: Google+
     linkedin: Linkedin
+    pinterest: Pinterest
+    qq: Qzone
+    share_to: Partager sur %{name}
+    tumblr: Tumblr
+    twitter: Twitter
+    vkontakte: Vkontakte
     wechat: WeChat
     wechat_footer: Open your WeChat, click "Discover" button then click the "Scan QR Code" menu.
-    vkontakte: Vkontakte
+    weibo: Sina Weibo
     xing: Xing
+social_share_button:
+  has_mini_pitches: '#'
