--- a/config/locales/social_share_button.zh-TW.yml
+++ b/config/locales/social_share_button.zh-TW.yml
@@ -1,19 +1,23 @@
-'zh-TW':
+social_share_button:
+  pitches:
+    show:
+      number_mini_pitch: 'Number mini pitches: '
+zh-TW:
   social_share_button:
-    share_to: 分享到 %{name}
-    weibo: 新浪微博
-    twitter: Twitter
-    facebook: Facebook
-    douban: 豆瓣
-    qq: QQ 空間
     delicious: Delicious
-    google_plus: Google+
-    google_bookmark: Google 收藏
-    tumblr: Tumblr
-    pinterest: Pinterest
+    douban: 豆瓣
     email: Email
+    facebook: Facebook
+    google_bookmark: Google 收藏
+    google_plus: Google+
     linkedin: Linkedin
+    pinterest: Pinterest
+    qq: QQ 空間
+    share_to: 分享到 %{name}
+    tumblr: Tumblr
+    twitter: Twitter
+    vkontakte: Vkontakte
     wechat: 微信
     wechat_footer: 打開微信，點擊底部的“發現”，<br/> 使用“掃一掃”即可將網頁分享至朋友圈。
-    vkontakte: Vkontakte
+    weibo: 新浪微博
     xing: Xing
