--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -700,10 +700,14 @@ vi:
       type: 'Loại sân: %{type}'
       view_button: Xem
     show:
+      btn_check: Kiểm tra
       btn_view_all: Xem tất cả
       btn_view_all": Xem tất cả
+      date: Ngày
+      end_hour: Giờ kết thúc
       mini_pitch_number: '%{num} sân mini'
       rent_time: 'Thời gian: '
+      start_hour: Giờ bắt đầu
       type: 'Loại sân: %{type}'
   minutes: ' (phút)'
   new_domain:
